--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <div id="conteudo">
         <h1>vou pra academia hoje? </h1>
 
-            <button class="btn" onclick="sim()">nao :D </button>
-            <button class="btn" onclick="desvia(this)" onmouseover="desvia(this)">sim. voce vai</button>
+            <button class="btn" onclick="sim()">COM CERTEZA </button>
+            <button class="btn" onclick="desvia(this)" onmouseover="desvia(this)">nao >:( </button>
         </div>
     </div>
 </body>
@@ -35,14 +35,14 @@
         color: white;
         border: none;
         padding: 20px;
-        width: 80px;
+        width: 100px;
         border-radius: 10px;
     }
 </style>
 
 <script>
     function sim() {
-        alert("OBRIGADO. A casa agradece. Vasco da Gama");
+        alert("AINDAAAAAAAAAAAAAAAAAAAAAA. Hoje vou puxar aquele que juntou o JOHN e o Kennedy");
     }
 
     function desvia(btn) {
