--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 <script>
     function sim() {
-        alert("AINDAAAAAAAAAAAAAAAAAAAAAA. Hoje vou puxar aquele que juntou o JOHN e o Kennedy");
+        alert("AINDAAAAAAAAAAAAAAAAAAAAAA. Hoje vou puxar aquele que juntou o JOHN E O KENNEDY");
     }
 
     function desvia(btn) {
